deployment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: users
  labels:
    name: users
    environment: stage
