deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    name: default
    environment: stage
