deployment/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gketenant-trial-mumbai-01-users
  namespace: gketenant-ns
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: gketenant-trial-mumbai-01-users
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: gketenant-trial-mumbai-01-users
  template:
    metadata:
      labels:
        app: gketenant-trial-mumbai-01-users
        devlift.ai/tenant: gketenant
        devlift.ai/environment: stage
        devlift.ai/service: gketenant-trial-mumbai-01-users
    spec:
      serviceAccountName: gketenant-trial-mumbai-01-users-sa
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: eks.amazonaws.com/instance-category
                    operator: NotIn
                    values: ["g", "p"]
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: gketenant-trial-mumbai-01-users
          image: 443245368846.dkr.ecr.ap-south-1.amazonaws.com/gketenant-trial-mumbai-01-users:IMAGE_TAG_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3333


          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3333
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
