deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first
  namespace: default
  annotations:
    reloader.stakater.com/auto: 'true'
  labels:
    app: first
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      serviceAccountName: first-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
      containers:
        - name: first
          image: 443245368846.dkr.ecr.ap-south-1.amazonaws.com/first:IMAGE_TAG_PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000


          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 3
