deployment/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gketenant-trial-mumbai-01-users-service
  namespace: gketenant-ns
  labels:
    app: gketenant-trial-mumbai-01-users
spec:
  type: ClusterIP
  selector:
    app: gketenant-trial-mumbai-01-users
  ports:
  - name: http
    port: 3333
    targetPort: 3333
    protocol: TCP
