deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: default
  labels:
    app: users
spec:
  type: ClusterIP
  selector:
    app: users
  ports:
  - name: http
    port: 3333
    targetPort: 3333
    protocol: TCP
